<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/title_account"
        app:showAsAction="always" />

</menu>
