<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CleanerActivity">

    <fragment
        android:id="@+id/nav_host_fragment_cleaner"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/cleaner_navigation"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="75dp" />

</androidx.constraintlayout.widget.ConstraintLayout>